--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,14 @@
-# Use LF line endings for all files in both local and remote repo
-*        text eol=lf
+# These files are text and should be normalized (convert crlf => lf)
+
+*.properties    text eol=lf
+*.md            text eol=lf
+*.txt           text eol=lf
+*.xml           text eol=lf
+*.scala         text eol=lf
+*.sbt           text eol=lf
+*.lua           text eol=lf
+
+# Images should be treated as binary
+# (binary is a macro for -text -diff)
+*.png     binary
+*.jepg    binary
